[project]
name = "finskipper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "anthropic>=0.83.0",
    "apscheduler>=3.11.0",
    "finlab>=1.5.7",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
    "numpy>=2.4.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.2.0",
    "python-telegram-bot>=22.6",
    "pytz>=2025.1",
    "requests>=2.32.0",
    "statsmodels>=0.14.0",
    "ta>=0.5.25",
    "yfinance>=1.2.0",
]
